测试完成发送邮件

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//Data/globalparameter.py=utf-8
 encoding//Public/SwipeTo.py=UTF-8
+encoding//Public/send_email.py=utf-8
 encoding/<project>=UTF-8
