增加验证码测试用例

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//Data/globalparameter.py=utf-8
 encoding//Public/SwipeTo.py=UTF-8
+encoding//Public/yzm.py=utf-8
+encoding//interface/InterTest.py=UTF-8
 encoding/<project>=UTF-8
